namespace HeadFirst.DesignPatterns.Iterator
{
    public interface IMenu
    {
        IIterator CreateIterator();
    }
}